changed reddit data to pos/neg

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "id": "6d659120",
    "metadata": {},
    "outputs": [
@@ -171,6 +171,10 @@
     "tweet_df[\"category\"].value_counts()\n",
     "sentiment_label = tweet_df.category.factorize()\n",
     "sentiment_label\n",
+    "\n",
+    "tweet_df[\"category\"].replace(to_replace=1, value=\"positive\", inplace=True)\n",
+    "tweet_df[\"category\"].replace(to_replace=-1, value=\"negative\", inplace=True)\n",
+    "\n",
     "\n",
     "tweet = tweet_df.clean_comment.values\n",
     "tokenizer = Tokenizer(num_words=5000)\n",
